# Application_Insights_Agent

./: .gitignore  README.md  main.py  pyproject.toml
agent/: agent.py
mcp_server/: app.py
